--- a/live2d.html
+++ b/live2d.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Live2D！把可爱的看板娘扑捉到你的博客去吧！</title>
 <link rel="stylesheet" href="/live2d/css/live2d.css" />
 </head>
 <body>
@@ -8,16 +9,16 @@
     <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
     <div class="hide-button">隱藏</div>
 </div>
-</body>
-<footer>
+
+<script type="text/javascript" src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 <script type="text/javascript">
     var message_Path = '/live2d/'
-    var home_Path = 'https://haremu.com/'  //此处修改为你的域名，必须带斜杠
+    var home_Path = 'https://haremu.com/' 
 </script>
 <script type="text/javascript" src="/live2d/js/live2d.js"></script>
 <script type="text/javascript" src="/live2d/js/message.js"></script>
 <script type="text/javascript">
     loadlive2d("live2d", "/live2d/model/tia/model.json");
 </script>
-</footer>
+</body>
 </html>
