--- a/live2d.html
+++ b/live2d.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Live2D！把可爱的看板娘扑捉到你的博客去吧！</title>
-<link rel="stylesheet" href="/live2d/css/live2d.css" />
+<link rel="stylesheet" href="live2d.css"/>
 </head>
 <body>
 <div id="landlord">
