--- a/live2d.html
+++ b/live2d.html
@@ -15,8 +15,8 @@
     var message_Path = '/live2d/'
     var home_Path = 'https://haremu.com/' 
 </script>
-<script type="text/javascript" src="/live2d/js/live2d.js"></script>
-<script type="text/javascript" src="/live2d/js/message.js"></script>
+<script type="text/javascript" src="live2d.js"></script>
+<script type="text/javascript" src="message.js"></script>
 <script type="text/javascript">
     loadlive2d("live2d", "/live2d/model/tia/model.json");
 </script>
