--- a/live2d.html
+++ b/live2d.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 <script type="text/javascript">
     var message_Path = '/live2d/'
-    var home_Path = 'https://haremu.com/' 
+    var home_Path = 'https://sheusampras.github.io/test/live2d.html/' 
 </script>
 <script type="text/javascript" src="live2d.js"></script>
 <script type="text/javascript" src="message.js"></script>
