--- a/live2d.html
+++ b/live2d.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Live2D！把可爱的看板娘扑捉到你的博客去吧！</title>
-<link rel="stylesheet" href="live2d.css"/>
+<link rel="stylesheet" href="test/live2d/css/live2d.css"/>
 </head>
 <body>
 <div id="landlord">
@@ -15,9 +15,10 @@
     var message_Path = '/live2d/'
     var home_Path = 'https://sheusampras.github.io/test/live2d.html/' 
 </script>
-<script type="text/javascript" src="live2d.js"></script>
-<script type="text/javascript" src="message.js"></script>
-<script type="text/javascript" src="model.json">
+<script type="text/javascript" src="test/live2d/js/live2d.js"></script>
+<script type="text/javascript" src="test/live2d/js/message.js"></script>
+<script type="text/javascript" src="test/live2d/model/tia/model.json>
+ loadlive2d("live2d", "test/live2d/model/tia/model.json");
 </script>
 </body>
 </html>
