--- a/live2d.html
+++ b/live2d.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="live2d.js"></script>
 <script type="text/javascript" src="message.js"></script>
 <script type="text/javascript">
-  loadlive2d("live2d", "/live2d/model/tia/model.json");
+  loadlive2d("live2d", "model.json");
 </script>
 </body>
 </html>
