--- a/live2d.html
+++ b/live2d.html
@@ -17,7 +17,7 @@
 </script>
 <script type="text/javascript" src="live2d.js"></script>
 <script type="text/javascript" src="message.js"></script>
-<script type="text/javascript" src="model.json">
+<script type="text/javascript">
   loadlive2d("live2d", "model.json");
 </script>
 </body>
