--- a/live2d.html
+++ b/live2d.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="message.js"></script>
 <script type="text/javascript">
   loadlive2d("live2d", "model.json");
+    loadlive2d("live2d", "message.json");
 </script>
 </body>
 </html>
