--- a/models/pio/2dlive.html
+++ b/models/pio/2dlive.html
@@ -10,7 +10,7 @@
     <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
 </div>
 
-<script async src="waifu-tips.js"></script>
+<script type="text/javascript" src="waifu-tips.js"></script>
 <script src="live2d.js"></script>
 <script type="text/javascript">
     loadlive2d("live2d", "model.json");
