--- a/models/pio/2dlive.html
+++ b/models/pio/2dlive.html
@@ -10,6 +10,7 @@
     <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
 </div>
 
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 <script type="text/javascript" src="waifu-tips.js"></script>
 <script src="live2d.js"></script>
 <script type="text/javascript">
